--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,20 @@
-spring.datasource.url=jdbc:h2:nem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-// para visualizar o console do H2
+#// para visualizar o console do H2
 spring.h2.console.enabled=true
 
+
+## H2
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
+
+## Datasource
+#spring.datasource.url=jdbc:h2:file:/home/wolmir/dbh2teset
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.jpa.hibernate.ddl-auto=update
